--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,29 +7,29 @@
 </head>
 <body>
     <h1>Privacy Policy for Medipol Discount Calculator Extension</h1>
-    <p>Effective Date: 07/10/2024</p>
+    <p><strong>Effective Date:</strong> 07/10/2024</p>
 
     <h2>Introduction</h2>
-    <p>The Medipol Discount Calculator Extension does not collect, store, or share any personal data. This extension is designed to work offline and perform calculations based on user input, without transmitting data to external servers.</p>
+    <p>The Medipol Discount Calculator Extension does not collect, store, or share any personal data. It is designed to work offline and perform calculations based on user input without transmitting data to external servers.</p>
 
     <h2>Data Collection and Use</h2>
-    <p>This extension does not collect or transmit any personal information or data to any third parties. All calculations are performed locally on the user's device, ensuring privacy and data security.</p>
+    <p>The extension does not collect or transmit any personal information to third parties. All calculations are performed locally on the user’s device, ensuring full privacy and data security.</p>
 
     <h2>Google Extension Permissions</h2>
-    <p>As part of ensuring user privacy and compliance with Google Chrome Web Store policies, the Medipol Discount Calculator Extension only requests the permissions strictly necessary for its operation. Below is a breakdown of permissions and their usage:</p>
+    <p>To ensure user privacy and comply with Google Chrome Web Store policies, the Medipol Discount Calculator Extension only requests permissions that are strictly necessary for its functionality. Below is an explanation of the permissions used and their status:</p>
 
     <ul>
-        <li><strong>storage</strong>: Initially requested to store user preferences or data locally, but this permission is no longer required for the extension’s core functionality. We have removed it to minimize access to user data.</li>
-        <li><strong>activeTab</strong>: This permission allowed the extension to interact with the currently active browser tab. However, as it is not needed for current features, it has been removed to limit unnecessary access.</li>
-        <li><strong>scripting</strong>: Previously requested to inject scripts into pages for potential future features, but since these features are not yet implemented, this permission has been removed.</li>
+        <li><strong>Storage:</strong> This permission was originally requested to store user preferences locally, but it is no longer necessary and has been removed.</li>
+        <li><strong>ActiveTab:</strong> This permission allowed the extension to interact with the active browser tab but is no longer needed and has been removed.</li>
+        <li><strong>Scripting:</strong> This permission was requested to inject scripts for potential future features, but as these features were not implemented, the permission has been removed.</li>
     </ul>
 
-    <p>The extension only requests permissions necessary for the immediate functionality of its features, following the principle of least privilege. We do not request permissions for future-proofing or unused functionality, ensuring compliance with Google’s Program Policies.</p>
+    <p>The extension now only requests permissions needed for its core features, following the principle of least privilege. No permissions are requested for unused or future-proofed functionalities, ensuring compliance with Google’s Program Policies.</p>
 
     <h2>Changes to this Privacy Policy</h2>
-    <p>We may update this Privacy Policy from time to time, particularly when changes are made to the permissions required by the extension. Any updates will be reflected in this document and within the extension’s listing in the Chrome Web Store.</p>
+    <p>We may update this Privacy Policy from time to time, especially when changes are made to the permissions or features of the extension. Any updates will be reflected in this document and in the Chrome Web Store listing.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions or concerns regarding this privacy policy or the permissions used by the Medipol Discount Calculator Extension, you can contact us at motaz200057@gmail.com.</p>
+    <p>If you have any questions or concerns regarding this Privacy Policy or the permissions used by the Medipol Discount Calculator Extension, please contact us at <a href="mailto:motaz200057@gmail.com">motaz200057@gmail.com</a>.</p>
 </body>
 </html>
